--- a/index.html
+++ b/index.html
@@ -242,12 +242,12 @@
 				
 				
 
-				<p><a class="btn btn-default" href="http://pan.baidu.com/s/1bprCtfL" target="_blank" role="button">百度网盘下载</a>
+				<p><a class="btn btn-default" href="http://ohus2zt7o.bkt.clouddn.com/release/TingChrome2018.1.1.exe" target="_blank" role="button">下载</a>
 				<!--
 				<a class="btn btn-default" href="http://url.cn/40kse5f" target="_blank" role="button">微云下载</a>
 				<a class="btn btn-default" href="http://yuolvv.ctfile.com/shared/folder_17558105_9020f24e/" target="_blank" role="button">备用下载</a></p>
-				-->
 				<a class="btn btn-default" href="https://my.pcloud.com/publink/show?code=kZiuhCZPQ9AMrvbG0FFxjHsiUbIFyuHF3o7" target="_blank" role="button">备用下载</a></p>
+				-->
 			</div>
 			<div class="col-md-6">
 				<img class="img-circle" src="images/firefox.png" alt="TingFirefox">
